# mirror-pttbbs

./: Makefile  Makefile.am  README  README.1st  README.branch  README.txt  configure.in  pttbbs.mk
cacheserver/: Makefile  cacheserver.c  utmpserver.c  utmpsync.c
docs/: fav.txt
include/: bbs.h  common.h  config.h  modes.h  osdep.h  proto.h  pttstruct.h
innbbsd/: Makefile  innbbsd.c  receive_article.c
mbbsd/: Makefile  Makefile.am  admin.c  aids.c  announce.c  assess.c  bbs.c  board.c  brc.c  cache.c  cal.c  calendar.c  card.c  ch_go.c  ch_gomo.c  chat.c  chc.c  chess.c  chicken.c  convert.c  dark.c  dice.c  edit.c  fav.c  friend.c  gamble.c  gomo.c  guess.c  i18n.c  indict.c  io.c  lovepaper.c  mail.c  mbbsd.c  menu.c  merge.c  more.c  name.c  ordersong.c  osdep.c  (+17 more)
pttbbs/: DEPRECATED
pttbbs/mbbsd/: Makefile
sample/: pttbbs.conf
util/: AngelConvert.c  Makefile  Makefile.am  account.c  bbsrf.c  boardlist.c  initbbs.c  loadstr.c  merge_board.c  shmctl.c  xchatd.c
