########################################################################
# PTT BBS Automake
# Create: piaip, Sat Sep 10 10:36:56 CST 2005
########################################################################
# $Id$

# We are not using standard GNU package
AUTOMAKE_OPTIONS=foreign

SUBDIRS=mbbsd util
